--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,17 @@
 <resources>
     <string name="app_name">Michelin_Guide</string>
+    <string name="string_search">Search</string>
+    <string name="string_location">Location</string>
+    <string name="string_category">Dish Category</string>
+    <string name="string_money">Price (1000 won)</string>
+    <string name="string_grade">Grade</string>
+    <string name="string_toolbar_name">Michelin Seoul</string>
 
+    <string name="string_simple_category1">Name</string>
+    <string name="string_simple_category2">Locale</string>
+    <string name="string_simple_category3">Dish</string>
+
+    <string name="string_input_warning">Please enter a search term.</string>
+    <string name="string_close_warning">Press one more time to exit.</string>
 
 </resources>
