--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,7 +3,7 @@
     <string name="string_search">Search</string>
     <string name="string_location">Location</string>
     <string name="string_category">Dish Category</string>
-    <string name="string_money">Price (1000 won)</string>
+    <string name="string_money">Price (10000 won)</string>
     <string name="string_grade">Grade</string>
     <string name="string_toolbar_name">Michelin Seoul</string>
 
@@ -14,4 +14,9 @@
     <string name="string_input_warning">Please enter a search term.</string>
     <string name="string_close_warning">Press one more time to exit.</string>
 
+    <string name="string_language">한글</string>
+
+    <string name="string_alphabet_order">ABC</string>
+    <string name="string_price_order">Price</string>
+    <string name="string_grade_order">Grade</string>
 </resources>
