마무리 작업

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,6 +6,7 @@
     <string name="string_money">Price (10000 won)</string>
     <string name="string_grade">Grade</string>
     <string name="string_toolbar_name">Michelin Seoul</string>
+    <string name="string_money2">Price</string>
 
     <string name="string_simple_category1">Name</string>
     <string name="string_simple_category2">Locale</string>
