--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="string_money">가격 (만원)</string>
     <string name="string_grade">등급</string>
     <string name="string_toolbar_name">미슐랭 서울</string>
+    <string name="string_money2">가격</string>
 
     <string name="string_simple_category1">식당</string>
     <string name="string_simple_category2">지역</string>
